# propsim

./: CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/propsim/: Cargo.toml
crates/propsim-core/: Cargo.toml
crates/propsim-core/src/: backend.rs  executor.rs  faults.rs  lib.rs  needs.rs  node.rs  oracle.rs  plan.rs  property_impl.rs  scenario.rs  seed.rs  transport.rs  world.rs
crates/propsim-core/tests/: negotiation.rs
crates/propsim-history/: Cargo.toml
crates/propsim-history/src/: edn.rs  history.rs  lib.rs  op.rs  time.rs
crates/propsim-history/tests/: jepsen_roundtrip.rs
crates/propsim-iroh/: Cargo.toml
crates/propsim-iroh/src/: lib.rs
crates/propsim-oracle/: Cargo.toml
crates/propsim-oracle/src/: lib.rs  linearizability.rs  model.rs
crates/propsim-oracle/tests/: register_linearizable.rs
crates/propsim-sim/: Cargo.toml
crates/propsim-sim/src/: ctx.rs  faults.rs  lib.rs  properties.rs  rng.rs  scheduler.rs
crates/propsim-sim/tests/: replicated_kv_linearizable.rs  worked_example.rs
crates/propsim/src/: backend_presets.rs  guard.rs  lib.rs  run.rs
crates/propsim/tests/: determinism_guard.rs  end_to_end.rs
docs/: architecture.md
